application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fatih-app-service
  namespace: uygulama
spec:
  selector:
    app: fatih-app
  ports:
    - port: 9001
      targetPort: 9001
  type: ClusterIP
